# web-server-vst

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  audio_processing_api.example  build_and_run.sh  clean_tmp.sh  cmake_install.cmake  nginx.conf  pentagono.py  setup_environment_X.sh  supervisord.conf  web-server-vst.jucer  xvfb.sh
.github/: deploy.yml
.github/workflows/: deploy.yml
Source/: AudioFileReader.cpp  AudioFileReader.h  Host.cpp  Host.h  Main.cpp  PluginHost.cpp  PluginHost.h  TestProcessAudio.cpp  main.cpp  utils.cpp  utils.h
xvfb/: Dockerfile  xvfb.sh
